fix/refactor/perf/docs: trade the bd of application
