# src/app/entities/modality/TModality.ts
@@ -1,0 +1,5 @@
+export type TModality = {
+  id: string
+  name: string
+  categoryId: string
+}
